<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WeatherApp</string>
    <string name="action_settings">Settings!</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_detail_weather">DetailWeather</string>
    
    <string  name="windSpeed">Prędkość wiatru</string>
    <string  name="windGust">Porywy wiatru</string>
    <string  name="cloudPercentage">Zachmurzenie</string>
    <string  name="snowMinimetres">Śnieg</string>
    <string  name="rainMinimetres">Deszcz</string>
    <string name="pressure">Ciśnienie</string>
    <string name="humidity">Wilgotność</string>
    
    <!-- Strings for notification -->
    <string name="take_umbrella_with_you">Weź parasol ze sobą!</string>
	<string name="it_looks_like_its_going_to_rain">Wygląda na to że będzie dzisiaj padać</string>

	
</resources>
