<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/weatherView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:src="@drawable/na" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/weatherView"
        android:layout_centerHorizontal="true"
         >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="0.5"
            android:layout_gravity="center_horizontal"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/windSpeed" />
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cloudPercentage" />
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/snowMinimetres" />
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rainMinimetres" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pressure" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/humidity" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="0.5"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/nowWindSpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView" />
            
            <TextView
                android:id="@+id/nowCloudPercentage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView" />

			<TextView
                android:id="@+id/nowSnow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView" />
			
			<TextView
                android:id="@+id/nowRain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView" />
			
			<TextView
                android:id="@+id/nowPressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView" />
			
			<TextView
                android:id="@+id/nowHumidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView" />
            
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tempView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/weatherView"
        android:layout_centerHorizontal="true"
        android:text="Kraków"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/cloudsView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tempView"
        android:layout_centerHorizontal="true"
        android:text="17°C"
        android:layout_marginTop="5dp"
        android:textSize="24sp" />

</RelativeLayout>